fix newInstance deprecation